fixed nested category, hate the !important, but stuck with it

--- a/src/components/CategoryNav/MenuItem.scss
+++ b/src/components/CategoryNav/MenuItem.scss
@@ -100,7 +100,7 @@
 			> div {
 				position: relative;
 				top: 0;
-				// display: block !important;
+				display: block !important;
 				padding: 0;
 				background-color: $white-base;
 
